[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pint-gedm"
version = "0.0.1"
description = "Script for doing electron density calculations on a par file."
keywords = ["astronomy", "astrophysics", "pulsar"]

authors = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"},
]
maintainers = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "pygedm>=3.3.0",
    "pint-pulsar>=1.1.3"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU General Public License Version 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/abhisrkckl/pint-gedm.jl"

[project.scripts]
pint-gedm = "pint_gedm:main"

[tool.setuptools]
zip-safe = false
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.distutils.bdist_wheel]
universal = 0

[tool.aliases]
test = "pytest"